# 4DOF-Service-Manipulator

./: .gitignore  README.md  requirements.txt
.github/workflows/: lint.yml
hardware/arduino/: README.md  send_trajectory.py
hardware/arduino/receiver/: receiver.ino
hardware/cad/: 5_DOF_Robot_Assembly.SLDASM  Arm_1.STEP  Arm_2.STEP  Arm_3.STEP  Base.STEP  Circular_Base.STEP  Gear_Arm_1.STEP  Gear_Arm_2.STEP  Grip.STEP  Link.STEP  Microservo_horn.STEP  README.md  Rotating_Waste.STEP  Servo_MG996R.STEP  Servo_Micro.STEP
milestones/: README.md
milestones/milestone-02/: forward_kinematics.py  milestone2_node.py
milestones/milestone-03/matlab/: All.m  auto_create_FK_test_4dof.m  (+11 more)
simulation/matlab/: README.md
simulation/ros/src/my_robot_gazebo/: CMakeLists.txt  README.md  package.xml
simulation/ros/src/my_robot_gazebo/config/: controllers.yaml
simulation/ros/src/my_robot_gazebo/launch/: spawn_gazebo.launch  view_model.launch
simulation/ros/src/my_robot_gazebo/meshes/: Arm_1.STL  Arm_2.STL  Arm_3.STL  Base_Link.STL  Gripper.STL  Rotating_Waste.STL
simulation/ros/src/my_robot_gazebo/models/my_robot/: model.config  model.sdf
simulation/ros/src/my_robot_gazebo/rviz/: model_view.rviz
simulation/ros/src/my_robot_gazebo/scripts/: ee_pose_from_gazebo.py  fk_validation_node.py  forward_kinematics.py  ik_validation_node.py  kinematic_joint_driver.py  kinematics.py  trajectory_node.py  trajectory_planner.py  validate_roundtrip.py  velocity_path_node.py
simulation/ros/src/my_robot_gazebo/urdf/: robot.urdf
simulation/ros/src/my_robot_gazebo/worlds/: stable.world
(+41 files in other folders)
